# notepipe-ai

./: .env.example  .gitignore  CLAUDE.md  README.md  SHARED_STATE.md  package-lock.json  package.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/middleware/: auth.py
backend/app/models/: schemas.py
backend/app/routers/: account.py  actions.py  auth.py  connections.py  dashboard.py  prompts.py  runs.py  templates.py  uploads.py  users.py  webhooks.py
backend/app/services/: attio.py  file_parser.py  fireflies.py  http.py  hubspot.py  llm.py  pipedrive.py  processor.py  zoho.py
backend/tests/: conftest.py  test_account.py  test_actions.py  test_connections.py  test_dashboard.py  test_health.py  test_prompts.py  test_templates.py  test_users.py
docs/: 01-FRONTEND.md  02-BACKEND.md  03-UI-UX.md  04-ORCHESTRATION.md  DEPLOYMENT.md  DISTRIBUTION.md
docs/plans/: 2026-02-22-prompt-bank-tools-design.md  2026-02-22-prompt-bank-tools.md
frontend/: middleware.ts  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/(dashboard)/: layout.tsx  page.tsx
frontend/app/(dashboard)/actions/: page.tsx
frontend/app/(dashboard)/connections/: page.tsx
frontend/app/(dashboard)/prompts/: page.tsx
frontend/app/(marketing)/: page.tsx
frontend/components/app/: ConnectionCard.tsx  ErrorBoundary.tsx  PromptEditor.tsx  RunCard.tsx  Sidebar.tsx  StatusBadge.tsx  TemplateEditor.tsx
frontend/lib/: api.ts  types.ts
shared/: schema.sql  seed.sql  types.ts
(+7 files in other folders)
